--- a/napari-workshops/_config.yml
+++ b/napari-workshops/_config.yml
@@ -1,8 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: napari workshop template
-author: napari core developers
+title: intro to napari workshop
+author: Peter Sobolewski & napari core developers
 logo: logo.ico
 
 # Only build files in the table of contents.
@@ -28,7 +28,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/napari/napari-workshop-template  # Online location of your book
+  url: https://github.com/psobolewskiPhD/intro-napari-workshop  # Online location of your book
   branch: main  # Which branch of the repository should be used when creating links (optional)
   path_to_book: "napari-workshops"  # A path to your book's folder, relative to the repository root.
 
