Update gettng started and toc

--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -8,6 +8,7 @@ chapters:
   sections:
   - file: installation
   - file: notebook_setup
+  - file: launching_binder
 - file: notebooks/index
   sections:
   - file: notebooks/intro_bioimage_visualization
