Update the GUI walkthrough

--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -9,6 +9,7 @@ chapters:
   - file: installation
   - file: notebook_setup
   - file: launching_binder
+- file: intro_napari_GUI
 - file: notebooks/index
   sections:
   - file: notebooks/intro_bioimage_visualization
