Move plugin basics to a new page

--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -16,3 +16,4 @@ chapters:
   - file: notebooks/intro_bioimage_visualization
   - file: notebooks/manual_annotation
   - file: notebooks/spot_detection
+- file: plugins
