--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -17,3 +17,5 @@ chapters:
   - file: notebooks/intro_bioimage_visualization
   - file: notebooks/manual_annotation
   - file: notebooks/spot_detection
+  - file: notebooks/spot_detection_functions
+- file: make_a_simple_plugin
