Add a short module on napari in scripts

--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -19,3 +19,4 @@ chapters:
   - file: notebooks/spot_detection
   - file: notebooks/spot_detection_functions
 - file: make_a_simple_plugin
+- file: napari_in_scripts
