Update this repo for changes when upstreaming to napari-workshop-templates (#4)
* switch to using features plus some typos

* function formatting

* update binder setup

* fix binder

* add missing websockify

* use JupyterLab binder interface by default

* fix config for jupyterlab

* more formatting fixes from JNI

* fix stray python line in  spot_detection.md

* update binder instructions for jupyterlab default

* add binder setupt to functions notebook

* remove duplicate dbus-x11

* fix stray backticks

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,11 +2,14 @@ name: binder
 channels:
   - conda-forge
 dependencies:
-  - python=3.9
-  - jupyter-server-proxy>=1.4
+  - python=3.11
+  - jupyterlab
   - jupytext
-  - pip
+  - jupyterlab-myst
+  - napari
+  - pyqt
+  - jupyter-book
   - websockify
-  - libxcb
+  - pip
   - pip:
-    - jupyter-desktop-server
+    - jupyter-remote-desktop-proxy
