split console into own page

--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -11,6 +11,7 @@ chapters:
   - file: notebook_setup
   - file: launching_binder
 - file: intro_napari_GUI
+- file: napari_console
 - file: plugins
 - file: notebooks/index
   sections:
