Updating the materials for 2025 workshop, PR1 (#7)
* update readme/home

* update installation: intro-napari-workshop and py312

* py312 everywhere

* Update the installation and audience. Add info about the bundle app

* update plugins

* remove making plugin page

* add napari-workshop-browser to the download jupyter page and clarify Binder page as an alternative

* info how to quick Jupyter from the plugin to get back to napari.

* Update GUI guide

* elaborate a bit on plugins guide

* split console into own page

--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -11,6 +11,7 @@ chapters:
   - file: notebook_setup
   - file: launching_binder
 - file: intro_napari_GUI
+- file: napari_console
 - file: plugins
 - file: notebooks/index
   sections:
@@ -18,5 +19,4 @@ chapters:
   - file: notebooks/manual_annotation
   - file: notebooks/spot_detection
   - file: notebooks/spot_detection_functions
-- file: make_a_simple_plugin
 - file: napari_in_scripts
