--- a/napari-workshops/_toc.yml
+++ b/napari-workshops/_toc.yml
@@ -19,4 +19,5 @@ chapters:
   - file: notebooks/manual_annotation
   - file: notebooks/interactive_analysis
   - file: notebooks/spot_detection
+  - file: notebooks/spot_detection_functions
 - file: napari_in_scripts
